typescript/checker/tests/conformance/es6/for-ofStatements/for-of7.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            59,
        ),
        hi: BytePos(
            60,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/for-ofStatements/for-of7.ts:2:1
  |
2 | v;
  | ^

